# calibration-rs

./: .gitattributes  .gitignore  AGENTS.md  API_REVISION.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  DESIGN_REVIEW.md  IMPLEMENTATION_PLAN.md  PLAN.md  README.md  REFACTORING_SUMMARY.md  REVIEW.md  dead_test
app/src-tauri/: Cargo.toml  tauri.conf.json
app/src-tauri/capabilities/: default.json
app/src-tauri/src/: commands.rs  disparity.rs  epipolar.rs  export_cache.rs  laser.rs  lib.rs  main.rs  run.rs
crates/calib/: Cargo.toml  README.md
crates/calib-cli/: Cargo.toml  README.md
crates/calib-cli/src/: main.rs
crates/calib-core/: Cargo.toml  README.md
crates/calib-core/src/: lib.rs  math.rs  models.rs  ransac.rs  test_utils.rs  view.rs
crates/calib-core/tests/: scheimpflug_distortion.rs
crates/calib-linear/: Cargo.toml  README.md
crates/calib-linear/src/: camera_matrix.rs  distortion_fit.rs  epipolar.rs  extrinsics.rs  handeye.rs  homography.rs  iterative_intrinsics.rs  laserline.rs  lib.rs  linescan.rs  math.rs  planar_pose.rs  pnp.rs  triangulation.rs  zhang_intrinsics.rs
crates/calib-linear/tests/: stereo_linear.rs
crates/calib-optim/: Cargo.toml  README.md
crates/calib-optim/src/: backend_lm.rs  intrinsics.rs  jacobian_ad.rs  lib.rs  planar_intrinsics.rs  problem.rs  robust.rs  traits.rs
crates/calib-optim/tests/: handeye.rs  handeye.rs.disabled  laserline_bundle.rs  laserline_bundle.rs.disabled  linescan_bundle.rs  linescan_bundle.rs.disabled  planar_intrinsics.rs  planar_intrinsics.rs.disabled  planar_intrinsics_real_data.rs  planar_intrinsics_real_data.rs.disabled  rig_extrinsics.rs  rig_extrinsics.rs.disabled  scheimpflug_optimization.rs  scheimpflug_optimization.rs.disabled
crates/calib-pipeline/: Cargo.toml  README.md
crates/calib-pipeline/examples/: compare_apis.rs  compare_apis.rs.disabled  custom_workflow.rs  custom_workflow.rs.disabled  session_basic.rs
crates/calib-pipeline/src/: functions.md  handeye_single.rs  helpers.rs  lib.rs  rig_extrinsics.rs  rig_handeye.rs
crates/calib-pipeline/tests/: laserline_device.rs
crates/calib/examples/: handeye_io.rs  handeye_session.rs  handeye_synthetic.rs  handeyesingle.rs  handeyesingle.rs.disabled  laserline_device_session.rs  planar_real.rs  planar_synthetic.rs  rig_extrinsics_session.rs  rig_handeye_session.rs  rig_handeye_session.rs.disabled  rig_handeye_synthetic.rs  stereo_session.rs  stereo_session.rs.disabled
crates/calib/src/: lib.rs
crates/vision-calibration/: Cargo.toml  README.md
crates/vision-calibration-bench/: Cargo.toml
crates/vision-calibration-bench/examples/: dense_synth.rs
crates/vision-calibration-bench/registry/: public.json
crates/vision-calibration-bench/src/: compare.rs  crossval.rs  dense.rs  detect.rs  fixtures.rs  lib.rs  params.rs  record.rs  registry.rs  run.rs  stability.rs
crates/vision-calibration-core/: Cargo.toml  README.md
crates/vision-calibration-core/src/: error.rs  lib.rs  linalg.rs  ransac.rs  test_utils.rs  view.rs
crates/vision-calibration-core/tests/: scheimpflug_distortion.rs
crates/vision-calibration-dataset/: Cargo.toml  README.md
crates/vision-calibration-dataset/src/: lib.rs  sniff.rs  spec.rs  validator.rs
crates/vision-calibration-detect/: Cargo.toml  README.md
crates/vision-calibration-detect/src/: cache.rs  charuco.rs  chess_options.rs  chessboard.rs  error.rs  feature.rs  lib.rs  puzzleboard.rs  ringgrid.rs
crates/vision-calibration-examples-private/: Cargo.toml
crates/vision-calibration-examples-private/examples/: puzzle_130x130_rig.rs  rtv3d_ref_intrinsics.rs  rtv3d_ref_rectify.rs  rtv3d_ref_reproj.rs  rtv3d_ref_rig.rs  rtv3d_rig.rs  rtv3d_ringgrid_intrinsics.rs  rtv3d_ringgrid_rig.rs
crates/vision-calibration-examples-private/src/: lib.rs
crates/vision-calibration-linear/: Cargo.toml  README.md
crates/vision-calibration-linear/benches/: linear_init.rs
crates/vision-calibration-linear/src/: camera_matrix.rs  distortion_fit.rs  epipolar.rs  error.rs  extrinsics.rs  handeye.rs  homography.rs  iterative_intrinsics.rs  laserline.rs  lib.rs  math.rs  planar_pose.rs  scheimpflug_init.rs  triangulation.rs  zhang_intrinsics.rs
crates/vision-calibration-linear/tests/: stereo_linear.rs
crates/vision-calibration-optim/: Cargo.toml  README.md
crates/vision-calibration-optim/benches/: ba_iter.rs
crates/vision-calibration-optim/src/: error.rs  lib.rs
crates/vision-calibration-optim/tests/: distortion_models.rs  handeye.rs  handeye_scheimpflug.rs  laserline_bundle.rs  planar_intrinsics.rs  planar_intrinsics_real_data.rs  rig_extrinsics.rs  rig_extrinsics_scheimpflug.rs  rig_laserline.rs  scheimpflug_optimization.rs
crates/vision-calibration-pipeline/: Cargo.toml  README.md
crates/vision-calibration-pipeline/src/: common.rs  dataset_runner.rs  error.rs  lib.rs  planar_family.rs  rig_family.rs
crates/vision-calibration-pipeline/tests/: json_contract_traits.rs  laserline_device.rs  planar_distortion_models.rs  rig_laserline_device.rs  rig_scheimpflug_extrinsics.rs  rig_scheimpflug_handeye.rs
crates/vision-calibration-py/: Cargo.toml  README.md  build.rs  pyproject.toml
crates/vision-calibration-py/examples/: _common.py  handeye_session.py  handeye_synthetic.py  laserline_device_session.py  planar_real.py  planar_synthetic.py  rig_handeye_synthetic.py  stereo_charuco_session.py  stereo_session.py
crates/vision-calibration-py/src/: convert.rs  geometry.rs  lib.rs  mvg.rs  validation.rs
crates/vision-calibration-py/tests/: test_geometry.py  test_high_level_api_contract.py  test_mvg.py  test_scheimpflug_intrinsics.py  test_typed_models.py
crates/vision-calibration/examples/: dense_stereo_real.rs  handeye_session.rs  handeye_synthetic.rs  laserline_device_session.rs  manual_init_proof.rs  mvg_two_view.rs  planar_real.rs  planar_synthetic.rs  planar_synthetic_with_images.rs  rig_handeye_synthetic.rs  stereo_charuco_session.rs  (+2 more)
crates/vision-geometry/: Cargo.toml  README.md
crates/vision-mvg/: Cargo.toml  README.md
xtask/: Cargo.toml
xtask/src/: emit_schemas.rs  main.rs
(+523 files in other folders)
