[workspace]
members = [
    "crates/vision-calibration",
    "crates/vision-calibration-py",
    "crates/vision-calibration-core",
    "crates/vision-calibration-linear",
    "crates/vision-calibration-optim",
    "crates/vision-calibration-pipeline",
]

resolver = "2"

[workspace.package]
version = "0.4.0"
edition = "2024"
# MSRV is 1.88. Some transitive deps are pinned in Cargo.lock below their
# latest release to stay MSRV-compatible. Before running `cargo update`,
# read docs/MSRV.md — running it blindly will re-break the 1.88 CI job.
rust-version = "1.88"
license = "MIT"
authors = ["Vitaly Vorobyev <vit.vorobiev@gmail.com>"]
homepage = "https://vitalyvorobyev.github.io/calibration-rs"
repository = "https://github.com/VitalyVorobyev/calibration-rs"

[workspace.dependencies]
vision-calibration = { path = "./crates/vision-calibration", version = "0.4.0" }
vision-calibration-core = { path = "./crates/vision-calibration-core", version = "0.4.0" }
vision-calibration-linear = { path = "./crates/vision-calibration-linear", version = "0.4.0" }
vision-calibration-optim = { path = "./crates/vision-calibration-optim", version = "0.4.0" }
vision-calibration-pipeline = { path = "./crates/vision-calibration-pipeline", version = "0.4.0" }

anyhow = "1"
thiserror = "2"
nalgebra = { version = "0.34", features = ["serde-serialize"] }
num-dual = "0.13"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4", features = ["derive"] }
log = "0.4"
image = { version = "0.25" }
chess-corners = { version = "0.6", features = ["rayon", "ml-refiner"] }
calib-targets = "0.7"
rand = { version = "0.10" }
tracing = { version = "0.1" }
tiny-solver = "0.18"
faer = "0.23"
faer-ext = "0.7"
