[workspace]
members = [
    "crates/vision-calibration",
    "crates/vision-calibration-py",
    "crates/vision-calibration-core",
    "crates/vision-calibration-linear",
    "crates/vision-calibration-optim",
    "crates/vision-calibration-pipeline",
    "crates/vision-calibration-dataset",
    "crates/vision-calibration-detect",
    "crates/vision-calibration-bench",
    "crates/vision-geometry",
    "crates/vision-mvg",
    "xtask",
]
# `app/src-tauri/` is its own crate — it pulls in the Tauri build-time
# dep tree and is built from `app/` (or via `npm run tauri dev`), not
# from the workspace root. See ADR 0014.
exclude = ["app"]

resolver = "2"

[workspace.package]
version = "0.5.1"
edition = "2024"
# MSRV is 1.93. Bumped from 1.88 on 2026-05-23 to drop the
# `fixed`/`kiddo` lockfile pins that kept breaking under `cargo update`.
# See docs/MSRV.md.
rust-version = "1.93"
license = "MIT"
authors = ["Vitaly Vorobyev <vit.vorobiev@gmail.com>"]
homepage = "https://vitalyvorobyev.github.io/calibration-rs"
repository = "https://github.com/VitalyVorobyev/calibration-rs"

[workspace.dependencies]
vision-calibration = { path = "./crates/vision-calibration", version = "0.5.1" }
vision-calibration-core = { path = "./crates/vision-calibration-core", version = "0.5.1" }
vision-calibration-linear = { path = "./crates/vision-calibration-linear", version = "0.5.1" }
vision-calibration-optim = { path = "./crates/vision-calibration-optim", version = "0.5.1" }
vision-calibration-pipeline = { path = "./crates/vision-calibration-pipeline", version = "0.5.1" }
vision-calibration-dataset = { path = "./crates/vision-calibration-dataset", version = "0.5.1" }
vision-calibration-detect = { path = "./crates/vision-calibration-detect", version = "0.5.1" }
vision-calibration-bench = { path = "./crates/vision-calibration-bench", version = "0.5.1" }
vision-geometry = { path = "./crates/vision-geometry", version = "0.5.1" }
vision-mvg = { path = "./crates/vision-mvg", version = "0.5.1" }

anyhow = "1"
thiserror = "2"
nalgebra = { version = "0.34", features = ["serde-serialize"] }
num-dual = "0.13"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
schemars = { version = "1", features = ["derive"] }
clap = { version = "4", features = ["derive"] }
log = "0.4"
image = { version = "0.25" }
calib-targets = "0.9"
chess-corners = "0.11"
ringgrid = "0.6"
glob = "0.3"
regex = "1"
rand = { version = "0.10" }
tracing = { version = "0.1" }
tiny-solver = "0.18"
faer = "0.23"
faer-ext = "0.7"
