[package]
name = "xtask"
version = "0.0.0"
edition.workspace = true
license.workspace = true
publish = false

[dependencies]
anyhow = { workspace = true }
serde_json = { workspace = true }
schemars = { workspace = true }
vision-calibration-pipeline = { workspace = true, features = ["schemars"] }
vision-calibration-dataset = { workspace = true, features = ["schemars"] }
