[package]
name = "calib-cli"
version = "0.1.0"
edition = "2021"

[dependencies]
calib-pipeline = { path = "../calib-pipeline" }
calib-core = { path = "../calib-core" }
clap = { version = "4", features = ["derive"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
nalgebra = { workspace = true }

[dev-dependencies]
assert_cmd = "2"
tempfile = "3"
serde_json = { workspace = true }
