[package]
name = "calib-linear"
version = "0.1.0"
edition = "2021"
readme = "README.md"

[dependencies]
calib-core = { path = "../calib-core" }
nalgebra = { workspace = true }
thiserror = { workspace = true }
log = "0.4"

[dev-dependencies]
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
