[package]
name = "calib-linear"
version = "0.1.0"
edition = "2021"
readme = "README.md"
description = "Closed-form and linear initialization solvers for calibration-rs"
license.workspace = true
homepage.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
calib-core = { path = "../calib-core", version = "0.1.0" }
nalgebra = { workspace = true }
log = "0.4"
serde = { workspace = true, features = ["derive"] }
anyhow = "1"

[dev-dependencies]
serde_json = { workspace = true }
