[package]
name = "calib-optim"
version = "0.1.0"
edition = "2021"

[dependencies]
calib-core = { path = "../calib-core" }
nalgebra = { workspace = true }
anyhow = "1"
tiny-solver = "0.18"

[dev-dependencies]
calib-linear = { path = "../calib-linear" }
serde = { workspace = true }
serde_json = { workspace = true }

[features]
default = []
