[package]
name = "calib-pipeline"
version = "0.1.0"
edition = "2021"

[dependencies]
calib-core = { path = "../calib-core" }
calib-linear = { path = "../calib-linear" }
calib-optim = { path = "../calib-optim" }
anyhow = "1"
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
nalgebra = { workspace = true }

[dev-dependencies]
serde_json = { workspace = true }
