[package]
name = "calib"
version = "0.1.0"
edition = "2021"

description = "High-level entry crate for the calibration-rs toolbox"
license.workspace = true
homepage.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
calib-core = { path = "../calib-core" }
calib-linear = { path = "../calib-linear" }
calib-optim = { path = "../calib-optim" }
calib-pipeline = { path = "../calib-pipeline" }

[dev-dependencies]
serde_json = { workspace = true }
chess-corners = { version = "0.3", features = ["rayon", "ml-refiner"] }
calib-targets = "0.2"
anyhow = "1"
image = { version = "0.25" }
