[package]
name = "calib"
version = "0.1.0"
edition = "2021"

description = "High-level entry crate for the calibration-rs toolbox"
license.workspace = true
homepage.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
anyhow = "1"
calib-core = { path = "../calib-core", version = "0.1.0" }
calib-linear = { path = "../calib-linear", version = "0.1.0" }
calib-optim = { path = "../calib-optim", version = "0.1.0" }
calib-pipeline = { path = "../calib-pipeline", version = "0.1.0" }

[dev-dependencies]
serde_json = { workspace = true }
chess-corners = { version = "0.3", features = ["rayon", "ml-refiner"] }
calib-targets = "0.2"
image = { version = "0.25" }
nalgebra = { workspace = true }
