[package]
name = "vision-calibration-core"
readme = "README.md"
description = "Core math types, camera models, and RANSAC primitives for vision-calibration"
keywords = ["camera", "calibration", "computer-vision", "robotics", "hand-eye"]  # max 5
categories = ["computer-vision"]  # pick from crates.io list
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true

[features]
tracing = ["dep:tracing"]

[dependencies]
nalgebra = { workspace = true }
serde = { workspace = true }
rand = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true, optional=true }

[dev-dependencies]
serde_json = { workspace = true }
