[package]
name = "vision-calibration-core"
readme = "README.md"
description = "Core math types, camera models, and RANSAC primitives for vision-calibration"
keywords = ["camera", "calibration", "computer-vision", "robotics", "hand-eye"]  # max 5
categories = ["computer-vision"]  # pick from crates.io list
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true

[lints]
workspace = true

[features]
tracing = ["dep:tracing"]
schemars = ["dep:schemars"]
# Unstable/internal: exposes the `test_utils` module for cross-crate test
# suites. Not part of the public API; do not enable in production builds.
test-utils = []

[dependencies]
nalgebra = { workspace = true }
serde = { workspace = true }
rand = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true, optional=true }
schemars = { workspace = true, optional = true }

[dev-dependencies]
anyhow = { workspace = true }
serde_json = { workspace = true }
