[package]
name = "vision-calibration-linear"
readme = "README.md"
description = "Closed-form and linear initialization solvers for calibration-rs"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true

[dependencies]
vision-calibration-core = { path = "../vision-calibration-core", version = "0.1.0" }
nalgebra = { workspace = true }
log = "0.4"
serde = { workspace = true, features = ["derive"] }
anyhow = "1"

[dev-dependencies]
serde_json = { workspace = true }
