[package]
name = "vision-calibration-linear"
readme = "README.md"
description = "Closed-form and linear initialization solvers for calibration-rs"
keywords = ["camera", "calibration", "computer-vision", "robotics", "hand-eye"]  # max 5
categories = ["computer-vision"]  # pick from crates.io list
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true

[dependencies]
vision-calibration-core = { workspace = true }
nalgebra = { workspace = true }
log = { workspace = true }
serde = { workspace = true }
anyhow = { workspace = true }

[dev-dependencies]
serde_json = { workspace = true }
