[package]
name = "vision-calibration-optim"
description = "Non-linear optimization problems and solvers for calibration-rs"
readme = "README.md"
keywords = ["camera", "calibration", "computer-vision", "robotics", "hand-eye"]  # max 5
categories = ["computer-vision"]  # pick from crates.io list
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true

[features]
schemars = ["dep:schemars", "vision-calibration-core/schemars"]

[dependencies]
vision-calibration-core = { workspace = true }
nalgebra = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tiny-solver = { workspace = true }
faer = { workspace = true }
faer-ext = { workspace = true }
serde = { workspace = true }
schemars = { workspace = true, optional = true }

[dev-dependencies]
vision-calibration-linear = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
