[package]
name = "vision-calibration-pipeline"
description = "End-to-end calibration workflows and session APIs for calibration-rs"
readme = "README.md"
keywords = ["camera", "calibration", "computer-vision", "robotics", "hand-eye"]  # max 5
categories = ["computer-vision"]  # pick from crates.io list
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true

[features]
schemars = [
    "dep:schemars",
    "vision-calibration-core/schemars",
    "vision-calibration-optim/schemars",
]

[dependencies]
vision-calibration-core = { workspace = true }
vision-calibration-linear = { workspace = true }
vision-calibration-optim = { workspace = true }
vision-calibration-dataset = { workspace = true }
vision-calibration-detect = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
nalgebra = { workspace = true }
image = { workspace = true }
glob = { workspace = true }
schemars = { workspace = true, optional = true }

[dev-dependencies]
serde_json = { workspace = true }
tempfile = "3"
