[package]
name = "vision-calibration"
description = "High-level entry crate for the vision-calibration toolbox"
readme = "README.md"
keywords = ["camera", "calibration", "computer-vision", "robotics", "hand-eye"]  # max 5
categories = ["computer-vision"]  # pick from crates.io list
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true

[lints]
workspace = true

[features]
default = []
# Enable the nonlinear-refinement surface of the `mvg` module (tiny-solver):
# `vision_calibration::mvg::bundle_adjust`.
refine = ["vision-mvg/refine"]

[dependencies]
vision-calibration-core.workspace = true
vision-calibration-linear.workspace = true
vision-geometry.workspace = true
vision-mvg.workspace = true
vision-calibration-optim.workspace = true
vision-calibration-pipeline.workspace = true

[dev-dependencies]
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
calib-targets = { workspace = true }
image = { workspace = true }
nalgebra = { workspace = true }
