[package]
name = "vision-geometry"
readme = "README.md"
description = "Shared geometric solvers: epipolar geometry, homography, triangulation, camera matrix"
keywords = ["computer-vision", "geometry", "epipolar", "homography", "triangulation"]
categories = ["computer-vision"]
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true

[dependencies]
vision-calibration-core = { workspace = true }
nalgebra = { workspace = true }
anyhow = { workspace = true }
